--- a/_weather.sass
+++ b/_weather.sass
@@ -12,14 +12,14 @@
                 margin-bottom: 20px
         input
             border-radius: 20px
-            height: 40px
-            padding: 0
+            padding: 8px 3px
         #btn
             color: #ffff
             background-color: #79afff
             padding: 10px 
             margin: 25px
             border-radius: 20px
+            cursor: pointer
             
             
             
