--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ a:hover {
 }
 #weather .box input {
   border-radius: 20px;
-  height: 40px;
-  padding: 0;
+  padding: 8px 3px;
 }
 #weather .box #btn {
   color: white;
@@ -35,4 +34,5 @@ a:hover {
   padding: 10px;
   margin: 25px;
   border-radius: 20px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
