--- a/_weather.sass
+++ b/_weather.sass
@@ -12,14 +12,17 @@
                 margin-bottom: 20px
         input
             border-radius: 20px
-            padding: 8px 3px
+            padding: 8px 10px
         #btn
             color: #ffff
             background-color: #79afff
-            padding: 10px 
-            margin: 25px
+            padding: 9px 
+            margin: 25px auto 0
             border-radius: 20px
             cursor: pointer
+            display: block
+            max-width: 100px
+            font-size: 20px
             
             
             
