--- a/style.css
+++ b/style.css
@@ -26,13 +26,16 @@ a:hover {
 }
 #weather .box input {
   border-radius: 20px;
-  padding: 8px 3px;
+  padding: 8px 10px;
 }
 #weather .box #btn {
   color: white;
   background-color: #79afff;
-  padding: 10px;
-  margin: 25px;
+  padding: 9px;
+  margin: 25px auto 0;
   border-radius: 20px;
   cursor: pointer;
+  display: block;
+  max-width: 100px;
+  font-size: 20px;
 }/*# sourceMappingURL=style.css.map */
